# QmlProject

./: .gitignore  CMakeLists.txt  README.md
qml/: main.qml
